# ml-mesh

./: .aws-cli-version  .beam-version  .cuda-version  .dask-version  .dockerignore  .flake8  .gitignore  .isort.cfg  .kubectl-version  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .s6-version  .scala-version  .ubuntu-version  .yamllint.yaml  Brewfile  Makefile  README.md  config.json  linux  package.json  prompt_summarization.sh  pyproject.toml  pytest.ini  pytype.toml  sonar-project.properties  test.py
docker/beam-backfill/: Dockerfile  pyproject.toml
docker/beam-worker/: Dockerfile  pyproject.toml
docker/dask-base/: Dockerfile  README.md  pyproject.toml
docker/fastapi-serve/: Dockerfile  pyproject.toml
docker/gpu-base/: Dockerfile  README.md  deep_learning_container.py  pyproject.toml
docker/gpu-base/tests/core/: gpu_device_test.py  gpu_test.py  torch_gpu_test.py  transformers_gpu_test.py
docker/gpu-train/: Dockerfile  README.md  pyproject.toml  start_with_right_hostname.sh  train.sh
docker/gpu-train/tests/core/: conftest.py  torch_gpu_test.py  transformers_gpu_test.py
docker/kubeflow-data-science/: Dockerfile  pyproject.toml
docker/kubeflow-jupyter/: .dockerignore  Dockerfile  pyproject.toml
docker/kubeflow-jupyter/.config/dask/: labextension.yaml
docker/kubeflow-jupyter/.jupyter/: jupyter_notebook_config.py
docker/kubeflow-jupyter/s6/services.d/jupyterlab/: run
docker/kubeflow-torch-cpu/: Dockerfile  pyproject.toml
docker/kubeflow-torch-cpu/.config/dask/: distributed.yaml  kubernetes.yaml
docker/kubeflow-torch-cpu/.jupyter/: jupyter_notebook_config.py
docker/kubeflow-torch-cpu/s6/services.d/jupyterlab/: run
docker/kubeflow-torch-gpu/: Dockerfile  pyproject.toml
docker/kubeflow-torch-inf/: Dockerfile  pyproject.toml
docker/neuron-compile/: Dockerfile  README.md  conftest.py  pyproject.toml  requirements-development.txt  requirements-production.txt  test_neuron_compile.py
docker/neuron-compile/test/: conftest.py  entrypoint.sh  test_torch_neuron.py
docker/neuron-compile/tests/core/: compile_neuron_test.py  conftest.py  ml_compile_neuron_test.py  test_ml_compile_neuron.py  test_torch_neuron.py  torch_neuron_test.py
docker/neuron-inference/: Dockerfile  README.md  pyproject.toml
docker/neuron-inference/test/: entrypoint.sh  test_torch_neuron.py
docker/neuron-inference/tests/core/: conftest.py  torch_neuron_test.py
features/: makefile.mk  pyproject.toml
features/onclusive/features/: repo_operations.py  settings.py
features/onclusive/features/contrib/: redshift.py
features/onclusive/features/feature_views/: iptc_first_level.py  iptc_second_level.py  iptc_third_level.py
features/onclusiveml/features/: __main__.py  settings.py  store.py
features/onclusiveml/features/contrib/: redshift.py
features/onclusiveml/features/feature_views/: iptc_first_level.py  iptc_first_level_on_demand.py  iptc_fourth_level.py  iptc_fourth_level_on_demand.py  iptc_second_level.py  iptc_second_level_on_demand.py  iptc_third_level.py  iptc_third_level_on_demand.py  topic.py  visitor_estimation_crawler_items.py  visitor_estimation_domains.py  visitor_estimation_eclr_links.py  visitor_estimation_entity_connections.py  visitor_estimation_entity_ea_per.py  visitor_estimation_entity_links.py  visitor_estimation_entity_links_lmd.py  visitor_estimation_profile_company_sectors.py  visitor_estimation_profile_entity_relationships.py  visitor_estimation_search_seeds.py
features/onclusiveml/tests/contrib/: redshift_test.py
features/src/: __main__.py  settings.py  store.py
features/src/feature_views/: iptc_first_level.py  iptc_second_level.py  iptc_third_level.py
features/tests/contrib/: redshift_test.py
libs/compile/: README.md  pyproject.toml
libs/compile/onclusiveml/compile/: __init__.py  compile_utils.py  compiled_model.py  compiled_pipeline.py  compiled_tokenizer.py  constants.py  pipeline.py  tokenizer.py
libs/compile/onclusiveml/tests/functional/: conftest.py
libs/compile/onclusiveml/tests/unit/: conftest.py  tokenizer.py
libs/core/: pyproject.toml
libs/core/onclusiveml/core/: constants.py  decorator.py  logger.py  retry.py  system.py  testing.py
libs/core/onclusiveml/core/base/: __init__.py  enum.py  exception.py  metaclasses.py  mixins.py  params.py  pydantic.py  utils.py
libs/data/: pyproject.toml
libs/data/onclusiveml/data/: exceptions.py  query_profile.py  query_profile_test.py
libs/data/onclusiveml/query_builder/: __init__.py  build_query.py  get_el.py  get_ner.py  scoring.py  settings.py
libs/data/onclusiveml/query_scorer/: __init__.py  clustering.py  get_articles.py  scoring.py  settings.py
libs/feature_store/: pyproject.toml
libs/feature_store/onclusiveml/feature_store/: __init__.py  base.py  constants.py  dev.env  feast.py  feature_store_handle.py  feature_store_utils.py  settings.py
libs/fileio/: pyproject.toml
libs/hashing/: pyproject.toml
libs/hashing/onclusiveml/hashing/: __init__.py  hashfunc.py  lsh.py  minhash.py  storage.py
libs/io/: pyproject.toml
libs/io/onclusiveml/io/: __init__.py  constants.py  exceptions.py  path.py
libs/keyword/: pyproject.toml
libs/keyword/onclusiveml/keyword/: compile_pipeline.py
libs/llm/: pyproject.toml
libs/llm/onclusiveml/llm/: mixins.py  typing.py
libs/llms/: pyproject.toml
libs/llms/onclusiveml/llms/: json_builder.py  mixins.py  typing.py
libs/ml_compile/: pyproject.toml
libs/ml_compile/onclusiveml/ml_compile/: __init__.py  compile_utils.py  compiled_model.py  compiled_pipeline.py  compiled_tokenizer.py  test_compiled_model.ipynb  test_compiled_pipeline.ipynb
libs/ml_compile/onclusiveml/tests/: conftest.py
libs/ml_models/: pyproject.toml
libs/ml_tracking/: pyproject.toml
libs/ml_tracking/onclusiveml/ml_tracking/: __init__.py  download.py  model_version.py  upload.py
libs/models/: pyproject.toml
libs/models/onclusiveml/tests/: test.py
libs/nlp/: pyproject.toml
libs/nlp/onclusiveml/nlp/: __init__.py  consts.py  preprocess.py  preprocessor.py  sentence_tokenize.py
libs/nlp/sentence_tokenize/: sentence_tokenize.py
(+2127 files in other folders)
