[tool.poetry]
name = "beam-backfill"
version = "0.1.0"
description = "Apache Beam backfill depdencies"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
apache-beam = "2.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
