[tool.poetry]
name = "dask-base"
version = "0.1.0"
description = "Dask image for workers and schedulers"
authors = ["Vincent Park <vincent.park@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
jupyterlab = "3.6.5"
notebook = "6.4.12"
ipykernel = "6.25.0"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
serving = {path = "../../libs/serving"}
tracking = {path = "../../libs/tracking"}
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "~1.3.0"
dask = "~2023.3.1"
kfp = "~1.8.22"
dask-kubernetes = "~2023.3.1"
distributed = "~2023.3.1"
kubernetes = "~23.6.0"
graphviz = "~0.20.1"
lz4 = "~4.3.2"
ipympl = "~0.9.3"
dask-labextension = "~6.2.0"
pyarrow = "^13.0.0"
s3fs = "^2023.9.0"
bokeh = "^2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
