[tool.poetry]
name = "fastapi-serve-cpu"
version = "0.1.0"
description = "Core docker image for serving with FastAPI."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.9.19"
fastapi = "0.110.2"
pydantic = "2.8.2"
uvicorn = "0.30.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
