[tool.poetry]
name = "gpu-base"
version = "0.1.0"
description = "PyTorch-flavoured GPU base image dependencies"
authors = ["Sebastian sebastian.scherer@onclusive.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nvidia-ml-py3 = "^7.352.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
