[tool.poetry]
name = "gpu-base"
version = "0.1.0"
description = "PyTorch-flavoured GPU base image dependencies"
authors = ["Sebastian sebastian.scherer@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
tracking = {path = "../../libs/tracking"}
torch = {version = "1.12.1+cu116", source = "torch-gpu"}
transformers = "^4.31.0"
accelerate = "^0.21.0"
datasets = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true
