[tool.poetry]
name = "gpu-train"
version = "0.1.0"
description = "PyTorch-flavoured GPU image for model training"
authors = ["Sebastian sebastian.scherer@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
tracking = {path = "../../libs/tracking"}
transformers = "^4.31.0"
accelerate = "^0.21.0"
datasets = "^2.14.0"
nvidia-ml-py3 = "^7.352.0"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl"}
pytest-order = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true
