[tool.poetry]
name = "kubeflow-data-science"
version = "0.1.0"
description = "Kubeflow image for generic purpose data science work."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
scikit-learn = "1.3.0"
xgboost = "2.0.0"
scipy = "1.9.3"
numpy = "1.24.2"
joblib = "1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
