[tool.poetry]
name = "kubeflow-jupyter"
version = "0.2.0"
description = "Base for all kubeflow images."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
jupyterlab = "3.6.5"
notebook = "6.4.12"
ipykernel = "6.25.0"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
serving = {path = "../../libs/serving"}
tracking = {path = "../../libs/tracking"}
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "~1.3.0"
dask = "~2023.3.1"
kfp = "~1.8.22"
dask-kubernetes = "~2023.3.1"
distributed = "~2023.3.1"
kubernetes = "~23.6.0"
graphviz = "~0.20.1"
lz4 = "~4.3.2"
ipympl = "~0.9.3"
dask-labextension = "~6.2.0"
pyarrow = "^11.0.0"
scikit-learn = "~1.3.0"
xgboost = "~1.7.3"
scipy = "~1.9.3"
joblib = "~1.3.1"
elasticsearch = "^7.0.0"
elasticsearch-dsl = "^7.0.0"
pandasticsearch = {extras = ["pandas"], version = "0.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
