[tool.poetry]
name = "kubeflow-torch-cpu"
version = "0.1.0"
description = "Kubeflow image for torch (CPU only)."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.9.19"
transformers = "4.43.2"
torch = "1.12.1"
numpy = "1.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
