[tool.poetry]
name = "kubeflow-torch-cpu"
version = "0.1.0"
description = "Kubeflow image for torch (CPU only)."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.9.19"
jupyterlab = "4.2.4"
notebook = "6.4.12"
ipykernel = "6.25.0"
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "~1.4.3"
simplejson = "3.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
