[tool.poetry]
name = "kubeflow-torch-cpu"
version = "0.1.0"
description = "Kubeflow image for torch (CPU only)."
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.9.19"
jupyterlab = "3.6.8"
notebook = "6.5.7"
ipykernel = "6.29.5"
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "~1.4.3"
simplejson = "3.0.9"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
serving = {path = "../../libs/serving"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
