[tool.poetry]
name = "kubeflow-torch-gpu"
version = "0.1.0"
description = "Kubeflow image for torch (GPU available)"
authors = ["Ivan Okhotnikov <ivan.okhotnikov@onclusive.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
jupyterlab = "3.6.5"
notebook = "6.4.12"
ipykernel = "6.25.0"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
serving = {path = "../../libs/serving"}
tracking = {path = "../../libs/tracking"}
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
transformers = "4.31.0"
torch = "1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
