[tool.poetry]
name = "kubeflow-torch-inf"
version = "0.1.0"
description = "Kubeflow image for torch (Inferentia available)"
authors = ["Ivan Okhotnikov <ivan.okhotnikov@onclusive.com>"]
readme = "README.md"
packages = [{include = "kubeflow_torch_inf"}]

[tool.poetry.dependencies]
python = "3.8.16"
jupyterlab = "3.6.5"
notebook = "6.4.12"
ipykernel = "6.25.0"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
compile = {path = "../../libs/compile"}
tracking = {path = "../../libs/tracking"}
neptune-notebooks = "^0.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
elasticsearch-dsl = "^7.0.0"
pandasticsearch = {extras = ["pandas"], version = "0.6.0"}

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
