[tool.poetry]
name = "kubeflow-torch-inf"
version = "0.1.0"
description = ""
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
jupyterlab = "4.2.4"
notebook = "7.2.1"
ipykernel = "6.29.5"
core = {path = "../../libs/core"}
nlp = {path = "../../libs/nlp"}
serving = {path = "../../libs/serving"}
tracking = {path = "../../libs/tracking"}
neptune-notebooks = "^0.9.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
elasticsearch = "^7.0.0"
elasticsearch-dsl = "^7.0.0"
pandasticsearch = {extras = ["pandas"], version = "0.6.0"}
simplejson = "3.0.9"

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
