[tool.poetry]
name = "neuron-compile"
version = "0.1.0"
description = "Neuron compilation of a torch based model graph"
authors = ["Sebastian sebastian.scherer@onclusive.com>"]
readme = "README.md"
packages = [{include = "neuron_compile"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.18.5"
tensorflow = {version = "1.15.5", source = "aws-neuron"}
protobuf = "3.20.1"
neuron-cc = {version = "1.13.5.0", source = "aws-neuron"}
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
transformers = "^4.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
