[tool.poetry]
name = "neuron-compile"
version = "0.1.0"
description = "Neuron compilation of a torch based model graph"
authors = ["Sebastian sebastian.scherer@onclusive.com>"]
readme = "README.md"
packages = [{include = "neuron_compile"}]

[tool.poetry.dependencies]
python = "3.8.16"
neuron-cc = {version = "1.14.3.0", source = "aws-neuron"}
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}
pytest = "7.2.0" # required for neuron-inference validation

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
compile = {path = "../../libs/compile"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
