[tool.poetry]
name = "neuron-compile"
version = "0.1.0"
description = "Neuron compilation of a torch based model graph"
authors = ["Sebastian Scherer sebastian.scherer@onclusive.com>"]
readme = "README.md"
packages = [{include = "neuron_compile"}]

[tool.poetry.dependencies]
python = "3.8.16"
neuron-cc = {version = "1.14.3.0", source = "aws-neuron"}
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}
transformers = "^4.37.2"

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
