[tool.poetry]
name = "neuron-inference"
version = "0.1.0"
description = "Context to score (i.e. run inference on) a torch based graph that has been compiled to torch neuron."
authors = ["Sebastian Scherer sebastian.scherer@onclusive.com>"]
readme = "README.md"
packages = [{include = "neuron_inference"}]

[tool.poetry.dependencies]
python = "3.8.16"
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
transformers = "4.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
