[tool.poetry]
name = "neuron-inference"
version = "0.1.0"
description = "Context to score (i.e. run inference on) a torch based graph that has been compiled to torch neuron."
authors = ["Sebastian Scherer sebastian.scherer@onclusive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.9.74.0", source = "aws-neuron"}
transformers = "4.44.2"

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
