[tool.poetry]
name = "compile"
version = "0.1.0"
description = "Internal library for model compilation utilities, in particular (but not exclusively) for neuron torchscript compilation."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
numpy = "1.22.0"
protobuf = "3.20.1"
neuron-cc = {version = "1.14.3.0", source = "aws-neuron"}
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}
transformers = "^4.27.2"
pandas = "1.3.1"
core = {path = "../core"}
urllib3 = "<2.0.0"


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-lazy-fixture = "0.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
