[tool.poetry]
name = "compile"
version = "0.1.0"
description = "Internal library for model compilation utilities, in particular (but not exclusively) for neuron torchscript compilation."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
protobuf = "3.20.1"
pandas = "1.3.1"
neuron-cc = {version = "1.21.0.0", source = "aws-neuron"}
tensorflow = {version = "1.15.5.post1", source = "aws-neuron"}
core = {path = "../core"}
urllib3 = "<2.0.0"


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-lazy-fixture = "0.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
