[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core library"
authors = ["Rene Jean Corneille <rene-jean.corneille@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
typing-extensions = ">=4.6.0"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
distro = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest-catchlog = "1.2.2"
pytest = "8.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
