[tool.poetry]
name = "data"
version = "0.1.0"
description = "Data sources and dataset management tools"
authors = ["Amaury de Guillebon <amaury.deguillebon@onclusive.com>",
            "Jian Tong <jian.tong@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.10.14"
boto3 = "^1.20.23"
boto3-type-annotations = "^0.3.1"
feast = {version = "0.38.0", extras = ["aws"]}
serving = {path = "../serving"}
apache-beam = "2.54.0"
core = {path = "../core"}
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-mock = "^3.11.1"
moto = "4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
