[tool.poetry]
name = "data"
version = "0.1.0"
description = "Library to interact with data models e.g. DynamoDB"
authors = ["Syed Reza <syed.reza@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
core = {path = "../core"}
dyntastic = "^0.15.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
moto = "^5.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
