[tool.poetry]
name = "feature_store"
version = "0.1.0"
description = "Data sources"
authors = ["Amaury de Guillebon <amaury.deguillebon@onclusive.com>",
            "Jian Tong <jian.tong@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
boto3 = "^1.20.23"
dill = "^0.3.7"
boto3-type-annotations = "^0.3.1"
feast = {version = "0.36.0", extras = ["aws"]}
serving = {path = "../serving"}
core = {path = "../core"}
kafka-python = "^2.0.2"
dask = {version = "2024.1.1", extras = ["dataframe"]}
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-mock = "^3.11.1"
moto = "4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
