[tool.poetry]
name = "feature_store"
version = "0.1.0"
description = "Data sources"
authors = ["Amaury de Guillebon <amaury.deguillebon@onclusive.com>",
            "Jian Tong <jian.tong@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
feast = {version = "0.40.1", extras = ["aws"]}
core = {path = "../core"}
features = {path = "../../features"}
dask = {version = "2024.8.0", extras = ["dataframe"]}
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-mock = "^3.11.1"
moto = "4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
