[tool.poetry]
name = "fileio"
version = "0.1.0"
description = "Files management"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
boto3 = "1.28.29"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
