[tool.poetry]
name = "hashing"
version = "0.1.0"
description = "Hashing algorithms."
authors = ["Amaury de Guillebon <amaury.deguillebon@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.10.14"

core = {path = "../core"}
nlp = {path = "../nlp"}
nltk = "^3.8.1"
jieba = "^0.42.1"
spacy = "3.7.4"
konoha = {version = "^5.0.0", extras = ["all"]}
numpy = "1.22.0"
scipy = "1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
