[tool.poetry]
name = "io"
version = "0.1.0"
description = "Files management"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
boto3 = "1.28.29"
core = {path = "../core"}


[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
