[tool.poetry]
name = "keyword"
version = "0.1.0"
description = ""
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
keybert = "^0.7.0"
transformers = "^4.27.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
