[tool.poetry]
name = "llm"
version = "0.1.0"
description = "LLM utilities"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
langchain = "^0.1.15"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
