[tool.poetry]
name = "llms"
version = "0.1.0"
description = "LLM utilities"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
core = {path = "../core"}
python = "3.8.16"
langchain = "^0.2.3"
transformers = "4.41.2"
langchain-experimental="0.0.60"
optimum = {version = "1.20.0", extras = ["onnxruntime"]}
onnxruntime="1.16.0"
urllib3="<2.0.0"
[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
