[tool.poetry]
name = "llms"
version = "0.1.0"
description = "LLM utilities"
authors = ["Rene-Jean Corneille <rene-jean.corneille@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
core = {path = "../core"}
python = "3.9.19"
langchain = "^0.3.3"
langchain-experimental = "^0.3.3"
langchain-aws = "^0.2.6"
langchain-openai = "^0.2.6"
urllib3 = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
