[tool.poetry]
name = "ml-compile"
version = "0.1.0"
description = "Internal library for model compilation utilities, in particular (but not exclusively) for neuron torchscript compilation."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
numpy = "1.18.5"
tensorflow = {version = "1.15.5", source = "aws-neuron"}
protobuf = "3.20.1"
neuron-cc = {version = "1.13.5.0", source = "aws-neuron"}
torch = "1.12.1"
torch-neuron = {version = "1.12.1.2.5.8.0", source = "aws-neuron"}
transformers = "^4.27.2"
pytest = "7.2.0"
pandas = "^1.3"


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"