[tool.poetry]
name = "ml-compile"
version = "0.1.0"
description = "Internal library for model tracking utilities using the neptune ai platform."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
neptune = "^1.1.1"
pytest = "7.2.0"
pytest-lazy-fixture = "0.6.3"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"