[tool.poetry]
name = "models"
version = "0.1.0"
description = "Project level ML (compiled) model wrapper classes and utilities."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
compile = {path = "../compile"}
keybert = "0.7.0"
numpy = "^1.19.1"


[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
default = false
secondary = true



[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
