[tool.poetry]
name = "models"
version = "0.1.0"
description = "Project level ML (compiled) model wrapper classes and utilities."
authors = ["Sebastian Scherer <sebastian.scherer@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
compile = {path = "../compile"}
nlp = {path = "../nlp"}
regex = "^2023.6.3"
beautifulsoup4 = "^4.12.2"
nptyping = "2.5.0"
torch = "1.12.1"
bertopic = {version = "0.15.0", optional = true}
keybert = {version = "0.7.0", optional = true}

[tool.poetry.extras]
topic = ["bertopic"]
keywords = ["keybert"]

[[tool.poetry.source]]
name = "aws-neuron"
url = "https://pip.repos.neuron.amazonaws.com/"
priority = "supplemental"



[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
