[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "NLP library"
authors = ["Syed Reza <syed.reza@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
pytest = "^7.3.2"
typing-extensions = "^4.6.2"
pydantic = "1.10.4"
nltk = "^3.8.1"
langdetect = "1.0.9"
core = {path = "../core"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
