[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "NLP library with various utilities"
authors = ["Syed Reza <syed.reza@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.8.16"
typing-extensions = "^4.5.0"
pydantic = "1.10.4"
nltk = "^3.8.1"
langdetect = "1.0.8"
core = {path = "../core"}


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
