[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "NLP library with various utilities"
authors = ["Syed Reza <syed.reza@onclusive.com>"]
packages = [{include = "onclusiveml"}]

[tool.poetry.dependencies]
python = "3.9.19"
nltk = "^3.8.1"
jieba = "^0.42.1"
langdetect = "1.0.8"
beautifulsoup4 = "^4.12.2"
core = {path = "../core"}
spacy = "3.7.4"
konoha = {version = "^5.0.0", extras = ["all"]}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
